
Version (CVS)
-------------

XML:  Fix a bug in SimpleTypeFactory.
      (Reported by Risheng Lin <rlin@eng.utoledo.edu>) (Arnaud)

XML:  Add an option in the Source Generator that allows to use wrapper objects instead of primitives
      (Eg java.lang.Double instead of double) (Arnaud)

XML:  Fix a bug when handling attibutes in the UnMarshallerHandler (bug reported and 
      patch submitted by Marcin Chalotowski <Marcin.Chalotowski@3dart.com>) (Arnaud)


Version 0.9.3 July 3, 2001
--------------------------

XML:    Added fix to CollectionInfoJ2 for unbounded collections. (kvisco)
           - reported by Julien Viet

XML:    Added nested Exception support for SimpleTypesFactory (kvisco)

XML:    Added nested Exception support for FieldHandlerImpl (kvisco)

XML:    Fixed CollectionInfoODMG30,  applied patch by Bernd Deichmann (kvisco)

XML:    Added the auto-complete feature and transient field support to 
        the mapping file. (Sebastien Gignoux <gignoux@intalio.com>)

XML:    Fix a bug that creates infinite loop when cross-importing 
        (or including) schemas(Arnaud).

XML:    Added the support for the facets min/max Ex/Inclusive for the date/time 
        types and added complete implementation of date/time W3C XML Schema 
        datatypes (Arnaud).

XML:    Added new supports for XML Schema Recommendation datatypes and remove 
        old references to the Candidate Recommendation document (Arnaud).

XML:    Added push behavior for the unmarshaller with SAX producer. Made some 
        functions public and UnmarshalHandler final.
        (Sebastien Gignoux <gignoux@intalio.com>)

XML:    Remove the xsi:type when using the generated descriptors.(Arnaud)

XML:    Support for the <any> element in the Marshalling Framework.(Arnaud)

XML:    Added setRootElement method to Marshaller.java to override default root 
        element name for document. Usefull when using classes generated via 
        'type' mapping, as the root element name is not known.